# mesmerize-viz

./: README.md  pyproject.toml  setup.cfg
examples/: swarm.ipynb
nvjpeg_test/: README.md  core.py  datapoint_tracer.py  requirements.txt  scroll_memmap.ipynb  scroll_memmap.py
viz/core/: __init__.py  signal.py  webplot.py
viz/dashboards/: defaults.py  swarm.py
