[metadata]
name = mesmerize-viz
version = attr: src.VERSION
description = Mesmerize visualization package
long_description = file: README.rst, LICENSE.rst
keywords = mesmerize, visualization
license = GNU GPL v3.0
classifiers =
    Topic :: Scientific/Engineering :: Visualization

[options]
include_package_data = True
packages = find:
install_requires =
    cython
    numpy
    pandas
    bokeh
    jupyterlab
